# vbeterm

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  default.nix  flake.nix  get-version  vbeterm.conf.example
.github/workflows/: tests.yml
m4/: ax_cflags_gcc_option.m4  ax_ld_check_flag.m4
src/: Makefile.am  color.c  dabbrev.c  term.c  term.h  vbeterm.c  vbeterm.h
